--- a/package.json
+++ b/package.json
@@ -2,13 +2,27 @@
   "name": "greencom-front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.18.139:8000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "js-cookie": "^2.2.1",
+    "primeflex": "^2.0.0",
+    "primeicons": "^4.1.0",
+    "primereact": "^6.3.2",
+    "query-string": "^7.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
