--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.6.0",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-ga4": "^1.4.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
